--- a/index.html
+++ b/index.html
@@ -1,7 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Projects Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #007acc;
+            color: white;
+            padding: 20px 10%;
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #007acc;
+            font-weight: bold;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 20px;
+        }
+        .project {
+            background: white;
+            margin: 15px 0;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #007acc;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Welcome to My Projects Portfolio</h1>
+        <p>Showcasing my work and achievements</p>
+    </header>
+    <nav>
+        <a href="#projects">Projects</a>
+        <a href="resume.pdf" target="_blank">Resume</a>
+    </nav>
+    <div class="container">
+        <section id="projects">
+            <h2>My Projects</h2>
+            <div class="project">
+                <h3>Drone Project</h3>
+                <p>Details about building a drone, challenges faced, and solutions implemented.</p>
+                <a href="https://github.com/yourusername/drone-project" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project">
+                <h3>PulsR AI Project</h3>
+                <p>Details about PulsR AI, Web3 integration, and GPT portal functionality.</p>
+                <a href="https://github.com/yourusername/pulsr-ai-project" target="_blank">View on GitHub</a>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2025 Your Name. All rights reserved.</p>
+    </footer>
 </body>
 </html>
