--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2>My Projects</h2>
             <div class="project">
                 <h3>Drone Project</h3>
-                <p>Details about building a drone, challenges faced, and solutions implemented.</p>
-                <a href="https://github.com/yourusername/drone-project" target="_blank">View on GitHub</a>
+                <p>Details about building an autonomous drone, challenges faced, and solutions implemented.</p>
+                <a href="https://github.com/vsubacius/AutonomousDrone/wiki" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
                 <h3>PulsR AI Project</h3>
-                <p>Details about PulsR AI, Web3 integration, and GPT portal functionality.</p>
-                <a href="https://github.com/yourusername/pulsr-ai-project" target="_blank">View on GitHub</a>
+                <p>The PulsR AI Web Portal is a decentralized platform designed to provide exclusive access to private AI models (GPTs) through a Web3 integration. The project emphasizes innovation, accessibility, and the seamless use of blockchain technology for membership verification and payment processing.</p>
+                <a href="https://github.com/vsubacius/PulsRwebportal" target="_blank">View on GitHub</a>
             </div>
         </section>
     </div>
