--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Projects Portfolio</h1>
-        <p>Showcasing my work and achievements</p>
+        <h1>Welcome to My Projects Portfolio!</h1>
+        <p>Showcasing my work and achievements >>This website is underdevelopment </p>
     </header>
     <nav>
         <a href="#projects">Projects</a>
