--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Vytas Subacius. All rights reserved.</p>
     </footer>
 </body>
 </html>
