--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
+        .about {
+            background: white;
+            margin: 15px 0;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -54,13 +61,17 @@
 <body>
     <header>
         <h1>Welcome to My Projects Portfolio!</h1>
-        <p>Showcasing my work and achievements >>This website is underdevelopment </p>
+        <p>Showcasing my work and achievements >>This website is under development </p>
     </header>
     <nav>
         <a href="#projects">Projects</a>
-        <a href="resume.pdf" target="_blank">Resume</a>
+        <a href="Vytas Resume (5).pdf" target="_blank">Resume</a>
     </nav>
     <div class="container">
+        <section class="about">
+            <h2>Who Am I?</h2>
+            <p>I am a very hard-working and dedicated Computer Engineer with a passion for quantum computing, aviation, AI, and cryptocurrency. I have extensive experience working in professional settings and am ready to make a positive impact in the world. My goal is to contribute innovative solutions to complex challenges and to continue learning and growing in my field.</p>
+        </section>
         <section id="projects">
             <h2>My Projects</h2>
             <div class="project">
