--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Projects Portfolio!</h1>
+        <h1>Welcome to Vytas' Projects Portfolio!</h1>
         <p>Showcasing my work and achievements >>This website is under development </p>
     </header>
     <nav>
@@ -70,7 +70,7 @@
     <div class="container">
         <section class="about">
             <h2>Who Am I?</h2>
-            <p>I am a very hard-working and dedicated Computer Engineer with a passion for quantum computing, aviation, AI, and cryptocurrency. I have extensive experience working in professional settings and am ready to make a positive impact in the world. My goal is to contribute innovative solutions to complex challenges and to continue learning and growing in my field.</p>
+            <p> My name is Vytas! I am a very hard-working and dedicated Computer Engineer with a passion for quantum computing, aviation, AI, and cryptocurrency! I have extensive experience working in professional settings and am ready to make a positive impact in the world. My goal is to contribute innovative solutions to complex challenges and to continue learning and growing in my field.</p>
         </section>
         <section id="projects">
             <h2>My Projects</h2>
