--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
             margin: 0 10px;
             font-size: 1.2em;
         }
+        .project.pulsr-ai {
+            background-color: black;
+            color: white; /* Optional: for better text visibility */
+        }
+
+        .project.pulsr-ai a {
+    color: #4da8ff; /* Optional: to make links visible on black */
+        }
+
+        .project.pulsr-ai a:hover {
+            color: #a6d7ff; /* Slight color change on hover */
+        }
+
     </style>
 </head>
 <body>
@@ -103,7 +116,7 @@
                     <p>Built an AI-powered autonomous drone with object detection and flight stabilization.</p>
                     <a href="https://github.com/vsubacius/AutonomousDrone/wiki" target="_blank">View on GitHub</a>
                 </div>
-                <div class="project">
+                <div class="project pulsr-ai">
                     <img src="pulsr_AI.png" alt="PulsR AI Project">
                     <h3>PulsR AI Web Portal</h3>
                     <p>A Web3-powered AI platform for secure and decentralized access to private AI models.</p>
